--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,9 @@ website:
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
-        href: Take-home_Ex1.html
+        href: Take-home_Ex/Take-home_Ex01.html
+      - text: "Take-home Exercise 2"
+        href: Take-home_Ex/Take-home_Ex02.html  
     right:
       - href: index.qmd
         text: Home
