--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,9 @@ website:
     - text: "In-class Exercise"
       menu:
       - text: "In-class Exercise 1"
-        href: In-class_Ex1.html
+        href: In-class_Ex/In-class_Ex01.html
+      - text: "In-class Exercise 2"
+        href: In-class_Ex/In-class_Ex02.html
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
