--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,10 @@ website:
       menu:
       - href: Hands-on_Ex/Hands-on_Ex00.html
         text: "Hands-on Exercise 0"
+      - href: Hands-on_Ex/Hands-on_Ex01.html
+        text: "Hands-on Exercise 1"
+      - href: Hands-on_Ex/Hands-on_Ex01.html
+        text: "Hands-on Exercise 1"
     - text: "In-class Exercise"
       menu:
       - text: "In-class Exercise 1"
