--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,9 +16,9 @@ website:
     - text: "In-class Exercise"
       menu:
       - text: "In-class Exercise 1"
-        href: In-class_Ex/In-class_Ex01.html
+        href: https://public.tableau.com/views/In-class_Ex01_17371866977140/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link
       - text: "In-class Exercise 2"
-        href: In-class_Ex/In-class_Ex02.html
+        href: https://public.tableau.com/views/In-class_Ex02_17377894914220/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
