--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,11 +29,11 @@ website:
         text: "Hands-on Exercise 9"
     - text: "In-class Exercise"
       menu:
-      - text: "In-class Exercise 1"
+      - text: "1. Intro to Tableau"
         href: https://public.tableau.com/views/In-class_Ex01_17371866977140/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link
-      - text: "In-class Exercise 2"
+      - text: "2. Creating Dashboards (Tableau)"
         href: https://public.tableau.com/views/In-class_Ex02_17377894914220/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link
-      - text: "In-class Exercise 3"
+      - text: "3. Creating Stories (Tableau)"
         href: In-class_Ex/In-class_Ex03/In-class_Ex03.qmd
       - text: "4. Boxplot"
         href: In-class_Ex/In-class_Ex04/In-class_Ex04.qmd
