--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,25 +7,25 @@ website:
     left:
     - text: "Hands-on Exercise"
       menu:
-      - href: Hands-on_Ex/Hands-on_Ex00.html
+      - href: Hands-on_Ex/Hands-on_Ex00.qmd
         text: "Hands-on Exercise 0"
-      - href: Hands-on_Ex/Hands-on_Ex01.html
+      - href: Hands-on_Ex/Hands-on_Ex01.qmd
         text: "Hands-on Exercise 1"
-      - href: Hands-on_Ex/Hands-on_Ex02.html
+      - href: Hands-on_Ex/Hands-on_Ex02.qmd
         text: "Hands-on Exercise 2"
-      - href: Hands-on_Ex/Hands-on_Ex03.html
+      - href: Hands-on_Ex/Hands-on_Ex03.qmd
         text: "Hands-on Exercise 3"
-      - href: Hands-on_Ex/Hands-on_Ex04.html
+      - href: Hands-on_Ex/Hands-on_Ex04.qmd
         text: "Hands-on Exercise 4"
-      - href: Hands-on_Ex/Hands-on_Ex05.html
+      - href: Hands-on_Ex/Hands-on_Ex05.qmd
         text: "Hands-on Exercise 5"
-      - href: Hands-on_Ex/Hands-on_Ex06.html
+      - href: Hands-on_Ex/Hands-on_Ex06.qmd
         text: "Hands-on Exercise 6"
-      - href: Hands-on_Ex/Hands-on_Ex07.html
+      - href: Hands-on_Ex/Hands-on_Ex07.qmd
         text: "Hands-on Exercise 7"
-      - href: Hands-on_Ex/Hands-on_Ex08.html
+      - href: Hands-on_Ex/Hands-on_Ex08.qmd
         text: "Hands-on Exercise 8"
-      - href: Hands-on_Ex/Hands-on_Ex09.html
+      - href: Hands-on_Ex/Hands-on_Ex09.qmd
         text: "Hands-on Exercise 9"
     - text: "In-class Exercise"
       menu:
@@ -42,9 +42,9 @@ website:
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
-        href: Take-home_Ex/Take-home_Ex01/Take-home_Ex01.html
+        href: Take-home_Ex/Take-home_Ex01/Take-home_Ex01.qmd
       - text: "Take-home Exercise 2"
-        href: Take-home_Ex/Take-home_Ex02/Take-home_Ex02.html
+        href: Take-home_Ex/Take-home_Ex02/Take-home_Ex02.qmd
     right:
       - href: index.qmd
         text: Home
