--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,7 +42,7 @@ website:
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
-        href: Take-home_Ex/Take-home_Ex01/Take-home_Ex01.qmd
+        href: Take-home_Ex/Take-home_Ex01/Take-home_Ex01.html
       - text: "Take-home Exercise 2"
         href: Take-home_Ex/Take-home_Ex02/Take-home_Ex02.qmd
     right:
