Changing Visuals for Homepage

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,25 +8,25 @@ website:
     - text: "Hands-on Exercise"
       menu:
       - href: Hands-on_Ex/Hands-on_Ex00.html
-        text: "Hands-on Exercise 0"
+        text: "0. Hands-on Exercise 0"
       - href: Hands-on_Ex/Hands-on_Ex01.html
-        text: "Hands-on Exercise 1"
+        text: "1. Hands-on Exercise 1"
       - href: Hands-on_Ex/Hands-on_Ex02.html
-        text: "Hands-on Exercise 2"
+        text: "2. Hands-on Exercise 2"
       - href: Hands-on_Ex/Hands-on_Ex03.html
-        text: "Hands-on Exercise 3"
+        text: "3. Hands-on Exercise 3"
       - href: Hands-on_Ex/Hands-on_Ex04.html
-        text: "Hands-on Exercise 4"
+        text: "4. Hands-on Exercise 4"
       - href: Hands-on_Ex/Hands-on_Ex05.html
-        text: "Hands-on Exercise 5"
+        text: "5. Hands-on Exercise 5"
       - href: Hands-on_Ex/Hands-on_Ex06.html
-        text: "Hands-on Exercise 6"
+        text: "6. Hands-on Exercise 6"
       - href: Hands-on_Ex/Hands-on_Ex07.html
-        text: "Hands-on Exercise 7"
+        text: "7. Hands-on Exercise 7"
       - href: Hands-on_Ex/Hands-on_Ex08.html
-        text: "Hands-on Exercise 8"
+        text: "8. Hands-on Exercise 8"
       - href: Hands-on_Ex/Hands-on_Ex09.html
-        text: "Hands-on Exercise 9"
+        text: "9. Hands-on Exercise 9"
     - text: "In-class Exercise"
       menu:
       - text: "1. Intro to Tableau"
@@ -41,10 +41,14 @@ website:
         href: In-class_Ex/In-class_Ex05/In-class_Ex05.qmd
     - text: "Take-home Exercise"
       menu:
-      - text: "Take-home Exercise 1"
+      - text: "1. Take-home Exercise 1"
         href: Take-home_Ex/Take-home_Ex01/Take-home_Ex01.html
-      - text: "Take-home Exercise 2"
+      - text: "2. Take-home Exercise 2"
         href: Take-home_Ex/Take-home_Ex02/Take-home_Ex02.html
+    - text: "Project"
+      menu:
+      - text: "Project"
+        href: Project/Project_01/Project.html
     right:
       - href: index.qmd
         text: Home
