Update Quatro file

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,8 +15,8 @@ website:
         text: "2. Hands-on Exercise 2"
       - href: Hands-on_Ex/Hands-on_Ex03a.html
         text: "3a. Hands-on Exercise 3"
-      - href: Hands-on_Ex/Hands-on_Ex03.html
-        text: "3b. Hands-on Exercise 3b"
+      - href: Hands-on_Ex/Hands-on_Ex03b.html
+        text: "3b. Hands-on Exercise 3"
       - href: Hands-on_Ex/Hands-on_Ex04.html
         text: "4. Hands-on Exercise 4"
       - href: Hands-on_Ex/Hands-on_Ex05.html
